# bountyhub

./: .dev.vars.example  .env.example  .gitignore  DEPLOYMENT.md  README.md  TECH_STACK_REVIEW.md  bounty-bucks-info.json  eslint.config.js  index.html  package-lock.json  package.json  test-prisma.js  tsconfig.json  vite.config.ts  wrangler.dev.toml  wrangler.toml  wrangler.workers.toml
.husky/: pre-commit  pre-push
bountyhub/: CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  ENVIRONMENT_VARIABLES_BACKUP.md  EXECUTIVE_SUMMARY.md  FEATURES_IMPLEMENTATION.md  GITHUB_INTEGRATION_PLAN.md  GITHUB_OAUTH_IMPLEMENTATION.md  HYBRID_SETUP.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_STEP1_INDEXES.md  PAGES_ENV_VARS.md  README.md  THEME_IMPLEMENTATION.md  bounty-bucks-info.json  index.html  local.db  package-lock.json  package.json  tailwind.config.js  test-profile-picture.js  tsconfig.json  vite.config.ts  wrangler.dev.toml  wrangler.pages.toml  wrangler.toml  wrangler.workers.toml
docs/: DEPLOYMENT.md  DESKTOP.md  ESSENTIALS.md  README.md  RELEASE.md  chat-realtime-options.md  deployment.md  desktop-release-and-updater.md  tech-stack.md
drizzle/: schema.ts
functions/: index.ts  tsconfig.json
public/: _headers  manifest.json  robots.txt  service-worker.js  sitemap.xml
scripts/: README-migrations.md  README-patch-wry.md  check-before-push.sh  convert-logo.js  dev-setup.sh  generate-brand-images.js  generate-desktop-icons.js  generate-update-manifest.js  mark-migration-0016-applied.sql  patch-wry-linux.cjs  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json  updater-all.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
xPortal/programs/governance/: Cargo.toml  README.md
xPortal/programs/governance/src/: lib.rs
(+622 files in other folders)
