[package]
name = "bountyhub"
version = "0.1.0"
description = "BountyHub desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Linux: wry 0.24.11 needs webkit2gtk::SettingsExt in scope. CI downloads wry,
# patches it (adds use webkit2gtk::SettingsExt), and this patch uses the result.
[patch.crates-io]
wry = { path = "../patches/wry" }
